--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ if (m) {
   var m = getCookie("domain");
  
   if(m){
-   location.href = m;
+//   location.href = m;
   } else {
    document.writeln("No Cookies...");
   }
