--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ function saveCookie() {
 	var time = now.getTime();
 	var expireTime = time + 1000*3600;
 	now.setTime(expireTime);
-	document.cookie = 'domain=https://sangjunkim.000webhostapp.com;'+'expires='+now.toGMTString()+';yourKey=' + custom  ;
+	document.cookie = 'domain=https://kkssjjj.github.io;'+'expires='+now.toGMTString()+';yourKey=' + custom  ;
 	
 }
 
