--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ function saveCookie() {
 }
 
 function move(){
-    var name =  document.find("#name").value();
+    var name =  document.find("name").value();
 	document.location = "https://sangjunkim.000webhostapp.com/web?name="+name;
 }
 </script>
