--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ function saveCookie() {
 	now.setTime(expireTime);
 	
 	var name = document.getElementById("name").value;
-	document.cookie = 'yourKey=' + custom + ';expires='+now.toGMTString()+';domain=sangjunkim.000webhostapp.com;'+'name='+name;
+	document.cookie = 'yourKey=' + custom + '; expires='+now.toGMTString()+'; domain=sangjunkim.000webhostapp.com'+'; name='+name +"; path=/";
+	
 }
 
 function getCookie(name) {
