--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function saveCookie() {
 	now.setTime(expireTime);
 	
 	var name = document.getElementById("name").value;
-	document.cookie = 'yourKey=' + custom + '; expires='+now.toGMTString()+'; domain=sangjunkim.000webhostapp.com'+'; name='+name +"; path=/";
+	document.cookie = 'yourKey=' + custom +'; name='+name +'; expires='+now.toGMTString()+'; domain=sangjunkim.000webhostapp.com'+"; path=/";
 	
 }
 
