--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ function saveCookie() {
 // 	document.cookie = 'yourKey=' + custom +'; name='+name +'; expires='+now.toGMTString()+'; domain=sangjunkim.000webhostapp.com'+"; path=/";
 	var name =  document.getElementById("name").value;
 	createCookie("name",name);
-	createCookie("style",테스트);
+	createCookie("style","테스트");
 	
 }
 function createCookie(name,value) {
