--- a/cookie.html
+++ b/cookie.html
@@ -14,7 +14,7 @@
   var m = getCookie("name");
  
   if(m){
-   location.href = "https://sangjunkim.000webhostapp.com?name="+m ;
+   location.href = "toastbeautyuser://?name="+m ;
   } else {
    document.writeln("No Cookies...");
   }
